@@ -59,6 +59,7 @@
 #define MODE_OPERONLY   0x0080
 #define MODE_REGISTERED 0x0100 /* Channel has been registered with ChanServ */
 #define MODE_REGONLY    0x0200
+#define MODE_NOCTRL     0x0400
 
 /* cache flags for silence on ban */
 #define CHFL_BAN_CHECKED  0x0080
