@@ -76,7 +76,7 @@ part_one_client(struct Client *client_p, struct Client *source_p,
    *  only allow /part reasons in -m chans
    */
   if (reason[0] && (!MyConnect(source_p) ||
-      ((can_send(chptr, source_p, ms) &&
+      ((can_send(chptr, source_p, ms, reason) &&
        (source_p->localClient->firsttime + ConfigFileEntry.anti_spam_exit_message_time)
         < CurrentTime))))
   {
